--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/chat_bot_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+#integrations
+ai.service = http://localhost/
+
+#version
+be.version = 1.0
