Updated HC, added REST for loading messages by chat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 #integrations
-ai.service = http://localhost/
+ai.service = http://localhost
 
 #version
-be.version = 1.0
+be.service.version = 1.0
